force-app/main/default/objects/Call_Line__c/fields/Retention_Alasan_Pembatalan__c.field-meta.xml
<CustomField>
    <fullName>Retention_Alasan_Pembatalan__c</fullName>
    <label>Retention - Alasan Pembatalan</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agent Personal Closing</fullName>
            </value>
            <value>
                <fullName>Client Did Not Received Renewal Notice</fullName>
            </value>
            <value>
                <fullName>Client is not Willing to Disclose Surrender Reason</fullName>
            </value>
            <value>
                <fullName>Client Was Forced to Buy Policy in the Beginning</fullName>
            </value>
            <value>
                <fullName>Credit Card / Account Cancellation</fullName>
            </value>
            <value>
                <fullName>Death Claim</fullName>
            </value>
            <value>
                <fullName>Disapoitment and Rejected Claim</fullName>
            </value>
            <value>
                <fullName>Disapoitment Of Axa Service</fullName>
            </value>
            <value>
                <fullName>Ex Agent To Other Influence (FA/Agent Change)</fullName>
            </value>
            <value>
                <fullName>Family Reason</fullName>
            </value>
            <value>
                <fullName>Financial Difficulty</fullName>
            </value>
            <value>
                <fullName>Have Many Insurances</fullName>
            </value>
            <value>
                <fullName>Moved to Competitor</fullName>
            </value>
            <value>
                <fullName>No Confidence to AXA Indonesia</fullName>
            </value>
            <value>
                <fullName>No Phone Number Available (Weong Phone, Fax, Sound, Move, Resign,Ect)</fullName>
            </value>
            <value>
                <fullName>Other Reason ( emmigration, bankrupt, etc )</fullName>
            </value>
            <value>
                <fullName>Paid</fullName>
            </value>
            <value>
                <fullName>Policy Delivering</fullName>
            </value>
            <value>
                <fullName>Poor Agent Service</fullName>
            </value>
            <value>
                <fullName>Product Features or Product Complaint</fullName>
            </value>
            <value>
                <fullName>Product Replacement (Switch to Other Product)</fullName>
            </value>
            <value>
                <fullName>Swicth To Other Her Instrument Investment</fullName>
            </value>
            <value>
                <fullName>Switch To Other Bank Mandiri Product</fullName>
            </value>
            <value>
                <fullName>UNCONTACTED (BUSY ON THE LINE, No Pick Up, ETC)</fullName>
            </value>
            <value>
                <fullName>Unit Price Fluctuation</fullName>
            </value>
            <value>
                <fullName>Walk In Customer</fullName>
            </value>
            <value>
                <fullName>Without Consent</fullName>
            </value>
            <value>
                <fullName>Surrender wait NCB</fullName>
            </value>
            <value>
                <fullName>NCB has been auto generated</fullName>
            </value>
            <value>
                <fullName>Policy keeps inforce</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>