force-app/main/default/objects/Call_Line__c/fields/Retention_FC__c.field-meta.xml
<CustomField>
    <fullName>Retention_FC__c</fullName>
    <label>Retention - FC</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Final concerved: SU</fullName>
            </value>
            <value>
                <fullName>Final concerved: CO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>