force-app/main/default/objects/Call_Line__c/fields/Retention_Note__c.field-meta.xml
<CustomField>
    <fullName>Retention_Note__c</fullName>
    <label>Retention - Note</label>
    <type>TextArea</type>
</CustomField>