force-app/main/default/objects/Call_Line__c/fields/Retention_Program__c.field-meta.xml
<CustomField>
    <fullName>Retention_Program__c</fullName>
    <label>Retention - Program</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cancer &amp; Save</fullName>
            </value>
            <value>
                <fullName>Extra Cancer Insurance</fullName>
            </value>
            <value>
                <fullName>Extra Health Insurance</fullName>
            </value>
            <value>
                <fullName>Extra Life Insurance</fullName>
            </value>
            <value>
                <fullName>Health &amp; Save</fullName>
            </value>
            <value>
                <fullName>Heart &amp; Save</fullName>
            </value>
            <value>
                <fullName>Hospital &amp; Save</fullName>
            </value>
            <value>
                <fullName>Hospital Plus Life</fullName>
            </value>
            <value>
                <fullName>Klik Proteksi Cancer</fullName>
            </value>
            <value>
                <fullName>Klik Proteksi Diri</fullName>
            </value>
            <value>
                <fullName>Klik Proteksi Diri Plus</fullName>
            </value>
            <value>
                <fullName>Klik Proteksi Jantung &amp; Stroke</fullName>
            </value>
            <value>
                <fullName>Klik Proteksi Jiwa</fullName>
            </value>
            <value>
                <fullName>Klik Proteksi Sehat</fullName>
            </value>
            <value>
                <fullName>Life &amp; Save</fullName>
            </value>
            <value>
                <fullName>Protection &amp; Save 8 Years</fullName>
            </value>
            <value>
                <fullName>Protection &amp; Save 10 Years</fullName>
            </value>
            <value>
                <fullName>AXA Syariah Plan &amp; Save 8 Years</fullName>
            </value>
            <value>
                <fullName>AXA Medicash Pro Seven</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>