force-app/main/default/objects/Call_Line__c/fields/Retention_Remark__c.field-meta.xml
<CustomField>
    <fullName>Retention_Remark__c</fullName>
    <label>Retention - Remark</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Blm FC-Gagal Debet</fullName>
            </value>
            <value>
                <fullName>Create Polis Baru</fullName>
            </value>
            <value>
                <fullName>Hold Billing</fullName>
            </value>
            <value>
                <fullName>Tdk FC-Pending</fullName>
            </value>
            <value>
                <fullName>Tetap Aktif</fullName>
            </value>
            <value>
                <fullName>Tetap Aktif Downgrade</fullName>
            </value>
            <value>
                <fullName>Tetap Aktif Removed TT</fullName>
            </value>
            <value>
                <fullName>Tetap Aktif Upgrade</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>