force-app/main/default/objects/Call_Line__c/fields/Retention_Result__c.field-meta.xml
<CustomField>
    <fullName>Retention_Result__c</fullName>
    <label>Retention - Result</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Lapse</fullName>
            </value>
            <value>
                <fullName>Surrender</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Cooling Off</fullName>
            </value>
            <value>
                <fullName>Inforce</fullName>
            </value>
            <value>
                <fullName>Inforce Downgrade</fullName>
            </value>
            <value>
                <fullName>Inforce Remove</fullName>
            </value>
            <value>
                <fullName>Inforce Remove Downgrade</fullName>
            </value>
            <value>
                <fullName>Inforce Upgrade</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>