force-app/main/default/objects/Call_Line__c/fields/Retention_Result_Status__c.field-meta.xml
<CustomField>
    <fullName>Retention_Result_Status__c</fullName>
    <label>Retention - Result Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CA</fullName>
            </value>
            <value>
                <fullName>CO</fullName>
            </value>
            <value>
                <fullName>EX</fullName>
            </value>
            <value>
                <fullName>IN</fullName>
            </value>
            <value>
                <fullName>LA</fullName>
            </value>
            <value>
                <fullName>PE</fullName>
            </value>
            <value>
                <fullName>SU</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>