force-app/main/default/objects/Call_Line__c/fields/Retur_Payment__c.field-meta.xml
<CustomField>
    <fullName>Retur_Payment__c</fullName>
    <label>Retur Payment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>