force-app/main/default/objects/Call_Line__c/fields/S1__c.field-meta.xml
<CustomField>
    <fullName>S1__c</fullName>
    <defaultValue>&quot;Apakah Customer Service Kami telah memberikan kemudahan dalam menangani permintaan Bapak/Ibu?&quot;</defaultValue>
    <label>S1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>