force-app/main/default/objects/Call_Line__c/fields/S2__c.field-meta.xml
<CustomField>
    <fullName>S2__c</fullName>
    <defaultValue>&quot;Apakah Customer Service kami memberikan jawaban yang jelas bagi Bapak/Ibu?&quot;</defaultValue>
    <label>S2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>