force-app/main/default/objects/Call_Line__c/fields/S3__c.field-meta.xml
<CustomField>
    <fullName>S3__c</fullName>
    <defaultValue>&quot;Apakah Bapak/Ibu sudah merasa permintaan Bapak/Ibu diproses dengan cepat?&quot;</defaultValue>
    <label>S3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>