force-app/main/default/objects/Call_Line__c/fields/Selisih__c.field-meta.xml
<CustomField>
    <fullName>Selisih__c</fullName>
    <label>Selisih</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>