force-app/main/default/objects/Call_Line__c/fields/send_reminder__c.field-meta.xml
<CustomField>
    <fullName>send_reminder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>send reminder</label>
    <type>Checkbox</type>
</CustomField>