force-app/main/default/objects/Call_Line__c/fields/SMS_Date__c.field-meta.xml
<CustomField>
    <fullName>SMS_Date__c</fullName>
    <label>SMS Date</label>
    <type>DateTime</type>
</CustomField>