force-app/main/default/objects/Call_Line__c/fields/Source_AGI__c.field-meta.xml
<CustomField>
    <fullName>Source_AGI__c</fullName>
    <description>Source AGI</description>
    <label>Source AGI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>