force-app/main/default/objects/Call_Line__c/fields/Source_Collection__c.field-meta.xml
<CustomField>
    <fullName>Source_Collection__c</fullName>
    <defaultValue>&apos;Manual by Upload&apos;</defaultValue>
    <label>Source Collection Call Line</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manual by Upload</fullName>
            </value>
            <value>
                <fullName>Automatic by System</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>