force-app/main/default/objects/Call_Line__c/fields/Status_has_call__c.field-meta.xml
<CustomField>
    <fullName>Status_has_call__c</fullName>
    <label>Status has call</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Takeout</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>