force-app/main/default/objects/Call_Line__c/fields/Status_Paid_Not_Paid__c.field-meta.xml
<CustomField>
    <fullName>Status_Paid_Not_Paid__c</fullName>
    <label>Status Paid/Not Paid</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Paid</fullName>
            </value>
            <value>
                <fullName>Not Paid</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
            <value>
                <fullName>Y</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>