force-app/main/default/objects/Call_Line__c/fields/Status_Polis__c.field-meta.xml
<CustomField>
    <fullName>Status_Polis__c</fullName>
    <label>Status Polis</label>
    <length>255</length>
    <type>Text</type>
</CustomField>