force-app/main/default/objects/Call_Line__c/fields/Status_Retry__c.field-meta.xml
<CustomField>
    <fullName>Status_Retry__c</fullName>
    <label>Status Retry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rescheduled</fullName>
            </value>
            <value>
                <fullName>Callback from CCC</fullName>
            </value>
            <value>
                <fullName>Booking Call</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>