force-app/main/default/objects/Call_Line__c/fields/Talk_Time__c.field-meta.xml
<CustomField>
    <fullName>Talk_Time__c</fullName>
    <label>Talk Time</label>
    <type>DateTime</type>
</CustomField>