force-app/main/default/objects/Call_Line__c/fields/Tanggal_Closed_AGI__c.field-meta.xml
<CustomField>
    <fullName>Tanggal_Closed_AGI__c</fullName>
    <description>Tanggal Closed AGI</description>
    <label>Tanggal Closed AGI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>