force-app/main/default/objects/Call_Line__c/fields/Tanggal_Email_Complaint_AGI__c.field-meta.xml
<CustomField>
    <fullName>Tanggal_Email_Complaint_AGI__c</fullName>
    <description>Tanggal Email Complaint AGI</description>
    <label>Tanggal Email Complaint AGI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>