force-app/main/default/objects/Call_Line__c/fields/Tanggal_Eskalasi_AGI_1__c.field-meta.xml
<CustomField>
    <fullName>Tanggal_Eskalasi_AGI_1__c</fullName>
    <description>Tanggal Eskalasi AGI 1</description>
    <label>Tanggal Eskalasi AGI 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>