force-app/main/default/objects/Call_Line__c/fields/Tanggal_Eskalasi_AGI_2__c.field-meta.xml
<CustomField>
    <fullName>Tanggal_Eskalasi_AGI_2__c</fullName>
    <description>Tanggal Eskalasi AGI 2</description>
    <label>Tanggal Eskalasi AGI 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>