force-app/main/default/objects/Call_Line__c/fields/Tanggal_Hold_Debet__c.field-meta.xml
<CustomField>
    <fullName>Tanggal_Hold_Debet__c</fullName>
    <label>Tanggal Hold Debet</label>
    <type>Date</type>
</CustomField>