force-app/main/default/objects/Call_Line__c/fields/Tanggal_Pengajuan_AGI__c.field-meta.xml
<CustomField>
    <fullName>Tanggal_Pengajuan_AGI__c</fullName>
    <description>Tanggal pengajuan untuk entity AGI</description>
    <label>Tanggal Pengajuan AGI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>