force-app/main/default/objects/Call_Line__c/fields/Todo_Item__c.field-meta.xml
<CustomField>
    <fullName>Todo_Item__c</fullName>
    <label>Todo Item</label>
    <length>999</length>
    <type>LongTextArea</type>
</CustomField>