force-app/main/default/objects/Call_Line__c/fields/Todo_Item_Status__c.field-meta.xml
<CustomField>
    <fullName>Todo_Item_Status__c</fullName>
    <label>Todo Item Status</label>
    <type>TextArea</type>
</CustomField>