force-app/main/default/objects/Call_Line__c/fields/Total_Acc_Balance__c.field-meta.xml
<CustomField>
    <fullName>Total_Acc_Balance__c</fullName>
    <label>Total Acc Balance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>