force-app/main/default/objects/Call_Line__c/fields/total_grouping_product__c.field-meta.xml
<CustomField>
    <fullName>total_grouping_product__c</fullName>
    <label>total_grouping_product</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>