force-app/main/default/objects/Call_Line__c/fields/Total_Uncontacted_New__c.field-meta.xml
<CustomField>
    <fullName>Total_Uncontacted_New__c</fullName>
    <label>Total Uncontacted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>