force-app/main/default/objects/Call_Line__c/fields/TotalNCB__c.field-meta.xml
<CustomField>
    <fullName>TotalNCB__c</fullName>
    <label>TotalNCB</label>
    <length>255</length>
    <type>Text</type>
</CustomField>