force-app/main/default/objects/Call_Line__c/fields/Transaction_Date__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Date__c</fullName>
    <description>Tanggal Transaksi AGI</description>
    <label>Transaction Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>