force-app/main/default/objects/Call_Line__c/fields/Uncontacted_Reason__c.field-meta.xml
<CustomField>
    <fullName>Uncontacted_Reason__c</fullName>
    <inlineHelpText>If result is uncontacted</inlineHelpText>
    <label>Uncontacted Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>