force-app/main/default/objects/Call_Line__c/fields/Update_Child__c.field-meta.xml
<CustomField>
    <fullName>Update_Child__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>If Child Different Result, Uncheck</inlineHelpText>
    <label>Update Child</label>
    <type>Checkbox</type>
</CustomField>