force-app/main/default/objects/Call_Line__c/fields/Update_Email__c.field-meta.xml
<CustomField>
    <fullName>Update_Email__c</fullName>
    <label>Update Email ?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>