force-app/main/default/objects/Call_Line__c/fields/Update_uncontacting__c.field-meta.xml
<CustomField>
    <fullName>Update_uncontacting__c</fullName>
    <label>Update uncontacting</label>
    <type>Date</type>
</CustomField>