force-app/main/default/objects/Call_Line__c/fields/UpdateEmail__c.field-meta.xml
<CustomField>
    <fullName>UpdateEmail__c</fullName>
    <label>UpdateEmail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>