force-app/main/default/objects/Call_Line__c/fields/Used_Phone__c.field-meta.xml
<CustomField>
    <fullName>Used_Phone__c</fullName>
    <label>Used Phone</label>
    <type>Phone</type>
</CustomField>