force-app/main/default/objects/Call_Line__c/fields/Verification__c.field-meta.xml
<CustomField>
    <fullName>Verification__c</fullName>
    <label>Reason Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Activity_Result__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AFI - Wrong Number</fullName>
            </value>
            <value>
                <fullName>Agent Personal Closing (Tdk Pernah Setuju)</fullName>
            </value>
            <value>
                <fullName>Agree</fullName>
            </value>
            <value>
                <fullName>Agree - Agree switch to Credit Card</fullName>
            </value>
            <value>
                <fullName>Agree - Agree to Cancel Redemption</fullName>
            </value>
            <value>
                <fullName>Agree - Agree to Cancel Withdrawal</fullName>
            </value>
            <value>
                <fullName>Agree - Agree to Pay</fullName>
            </value>
            <value>
                <fullName>Agree - Agree to pay via Autodebet</fullName>
            </value>
            <value>
                <fullName>Agree - Agree to pay via SO or Walk In</fullName>
            </value>
            <value>
                <fullName>Agree - Agree to Pay via Transfer</fullName>
            </value>
            <value>
                <fullName>Agree - Agree to Pay via Virtual Account</fullName>
            </value>
            <value>
                <fullName>Agree - Agree Top Up Lumpsum</fullName>
            </value>
            <value>
                <fullName>Agree - Agree to reinstate</fullName>
            </value>
            <value>
                <fullName>Agree - Bersedia Melengkapi Kekurangan Dokumen</fullName>
            </value>
            <value>
                <fullName>Agree - Bersedia Menunggu Proses Claim</fullName>
            </value>
            <value>
                <fullName>Agree - Koreksi data polis</fullName>
            </value>
            <value>
                <fullName>Agree - Koreksi Data Rekening</fullName>
            </value>
            <value>
                <fullName>Agree - Menerima Penjelasan dari Agen</fullName>
            </value>
            <value>
                <fullName>Agree - Mengisi dan Menandatangani SPAJ</fullName>
            </value>
            <value>
                <fullName>Agree - Others</fullName>
            </value>
            <value>
                <fullName>Agree - Quisioner By Phone</fullName>
            </value>
            <value>
                <fullName>Agree - Sudah terima Buku polis</fullName>
            </value>
            <value>
                <fullName>Agree Surat Keluhan</fullName>
            </value>
            <value>
                <fullName>Agree - Tahapan</fullName>
            </value>
            <value>
                <fullName>Agree - Transferred to Other account</fullName>
            </value>
            <value>
                <fullName>Agree - Update Address</fullName>
            </value>
            <value>
                <fullName>Agree - Update Data</fullName>
            </value>
            <value>
                <fullName>Agree - Update Data All</fullName>
            </value>
            <value>
                <fullName>Agree - Update Data more than 1 item</fullName>
            </value>
            <value>
                <fullName>Agree - Update Document</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>