force-app/main/default/objects/Call_Line__c/fields/WelcomeCall_Attempt__c.field-meta.xml
<CustomField>
    <fullName>WelcomeCall_Attempt__c</fullName>
    <label>Attempt</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>