force-app/main/default/objects/Call_Line__c/fields/WelcomeCall_Cooling_Off__c.field-meta.xml
<CustomField>
    <fullName>WelcomeCall_Cooling_Off__c</fullName>
    <label>Cooling Off</label>
    <type>Date</type>
</CustomField>