force-app/main/default/objects/Call_Line__c/fields/WelcomeCall_Criteria__c.field-meta.xml
<CustomField>
    <fullName>WelcomeCall_Criteria__c</fullName>
    <label>Criteria</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>HVC</fullName>
            </value>
            <value>
                <fullName>RETAIL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>