force-app/main/default/objects/Call_Line__c/fields/WelcomeCall_Customer_Expectation__c.field-meta.xml
<CustomField>
    <fullName>WelcomeCall_Customer_Expectation__c</fullName>
    <label>Customer Expectation</label>
    <length>50</length>
    <type>Text</type>
</CustomField>