force-app/main/default/objects/Call_Line__c/fields/WelcomeCall_Customer_Satisfaction__c.field-meta.xml
<CustomField>
    <fullName>WelcomeCall_Customer_Satisfaction__c</fullName>
    <label>Customer Satisfaction</label>
    <length>10</length>
    <type>Text</type>
</CustomField>