force-app/main/default/objects/Call_Line__c/fields/WelcomeCall_Fg_Round_Robin__c.field-meta.xml
<CustomField>
    <fullName>WelcomeCall_Fg_Round_Robin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fg Round Robin</label>
    <type>Checkbox</type>
</CustomField>