force-app/main/default/objects/Call_Line__c/fields/WelcomeCall_Fg_Schedule__c.field-meta.xml
<CustomField>
    <fullName>WelcomeCall_Fg_Schedule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fg Schedule</label>
    <type>Checkbox</type>
</CustomField>