force-app/main/default/objects/Call_Line__c/fields/WelcomeCall_First_Call_Date__c.field-meta.xml
<CustomField>
    <fullName>WelcomeCall_First_Call_Date__c</fullName>
    <label>First Call Date</label>
    <type>DateTime</type>
</CustomField>